# avro4s

./: BUILD.bazel  WORKSPACE  dependencies.yaml
avro4s-core/: BUILD.bazel
